src/test/deca/context/valid/oracle/println_different_types.deca
{
    int i = 0;
    float f = 1.0;
    println(1);
    println(i);
    println(1.0);
    println(f);
    println("Hello Moon !");
}