src/test/deca/context/invalid/oracle/method_in_main_block.deca
{
    void f(){
            println("Hello World !");
        }
}